# compactskel

./: CMakeLists.txt  README.md
src/lib/algorithm/: CMakeLists.txt
src/lib/algorithm/skeletonization/: BoundaryOperations.cpp  BoundaryOperations.h  DistanceField.cpp  DistanceField.h  MovingCenter.cpp  MovingCenter.h  SpherePropagation2D.cpp  SpherePropagation2D.h
src/soft/soft_2dskeletonization/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt
src/utils/fileio/: BoundaryFile2D.cpp  BoundaryFile2D.h  CMakeLists.txt  SkeletonFile.cpp  SkeletonFile.h
